@@ -140,6 +140,8 @@ public final class ContainerCluster
     public static final String STATE_HANDLER_CLASS = "com.yahoo.container.jdisc.state.StateHandler";
     public static final String STATISTICS_HANDLER_CLASS = "com.yahoo.container.config.StatisticsRequestHandler";
     public static final String SIMPLE_LINGUISTICS_PROVIDER = "com.yahoo.language.provider.SimpleLinguisticsProvider";
+    public static final String CMS = "-XX:+UseConcMarkSweepGC -XX:MaxTenuringThreshold=15 -XX:NewRatio=1";
+    public static final String G1GC = "-XX:+UseG1GC -XX:MaxTenuringThreshold=15";
 
     public static final String ROOT_HANDLER_BINDING = "*://*/";
 
@@ -181,6 +183,7 @@ public final class ContainerCluster
     private Zone zone;
     
     private String hostClusterId = null;
+    private String gcopts = null;
     private Integer memoryPercentage = null;
 
     private static class AcceptAllVerifier implements ContainerClusterVerifier {
@@ -784,6 +787,8 @@ public final class ContainerCluster
     public Optional<String> getHostClusterId() { return Optional.ofNullable(hostClusterId); }
 
     public void setMemoryPercentage(Integer memoryPercentage) { this.memoryPercentage = memoryPercentage; }
+    public void setGCOpts(String gcopts) { this.gcopts = gcopts; }
+    public Optional<String> getGCOpts() { return Optional.ofNullable(gcopts); }
 
     /** 
      * Returns the percentage of host physical memory this application has specified for nodes in this cluster,
